tests/errors/redefined-func-type.ink
// @test error

struct Foo
{
	int x;
}

fn_type Foo = (int) : int

int main()
{
	return 0;
}